Added features to TODO list

--- a/src/java/core/net/sharkfw/knowledgeBase/sync/TODO
+++ b/src/java/core/net/sharkfw/knowledgeBase/sync/TODO
@@ -41,3 +41,4 @@ Features:
     - Vorhaben(Syncs) => Protokoll implementieren
     - Contextspaces syncen
     - Bucketlist persistent
+    - eigeninformation auf allinteresse
