Updated Sync TODO

--- a/src/java/core/net/sharkfw/knowledgeBase/sync/TODO
+++ b/src/java/core/net/sharkfw/knowledgeBase/sync/TODO
@@ -34,3 +34,6 @@ Features:
 //(die IMSKB kann dann auch als Knowledge interpretiert werden -> asKnowledge)
 
 werden bei createContextPoint Properties mitkopiert?
+
+Wohin Timestamps speichern?
+Properties für CCs?
