--- a/src/java/core/net/sharkfw/knowledgeBase/sync/TODO
+++ b/src/java/core/net/sharkfw/knowledgeBase/sync/TODO
@@ -37,3 +37,7 @@ werden bei createContextPoint Properties mitkopiert?
 
 Wohin Timestamps speichern?
 Properties für CCs?
+
+Identifizieren der Wissensbasis, damit, wenn ein Peer 2 Sync KPs besitzt, nicht der eine Step zur einen, der andere Step zur anderen geschickt wird.
+
+addInformation(Information source) setzt nur Referenz, keine copy  
