Tests for syncKP theoretically working but with race conditions

--- a/src/java/core/net/sharkfw/knowledgeBase/sync/TODO
+++ b/src/java/core/net/sharkfw/knowledgeBase/sync/TODO
@@ -46,3 +46,6 @@ peerRemoved/peerAdded triggert nicht
 
 
 SyncKP bug tests
+
+Fragmentation wirft Exception, wenn der Anchor null ist
+Race Condition(broken fucking pipe)
